# WeighToGo

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_QUALITY_AUDIT.md  CODE_QUALITY_FIX_PLAN.md  CONTRIBUTING.md  README.md  SUMMARY.md  TODO.md  Weight_Tracking_App_Requirements.md  project_summary.md  release-please-config.json
web/backend/: .env.example  .gitkeep  README.md  alembic.ini  docker-compose.yml  pyproject.toml
web/backend/alembic/: env.py
web/backend/alembic/versions/: 0001_initial_users_and_auth.py  0002_weight_entries.py  0003_goals.py  0004_goals_direction_check.py  0007_performance_indexes.py  0008_streak_achievement_type.py  0009_audit_log.py  0010_constraint_hardening.py
web/backend/scripts/: backup.sh  restore.sh
web/backend/scripts/tests/: backup.bats  restore.bats
web/backend/scripts/tests/helpers/fake-bin/: pg_dump  pg_restore
web/backend/src/weighttogo/: config.py  main.py
web/backend/src/weighttogo/achievements/application/: detect_achievements.py
web/backend/src/weighttogo/achievements/domain/: entities.py  ports.py  streak_detector.py
web/backend/src/weighttogo/achievements/infrastructure/: models.py  repositories.py
web/backend/src/weighttogo/achievements/interface/: router.py  schemas.py
web/backend/src/weighttogo/audit/: __init__.py
web/backend/src/weighttogo/audit/application/: __init__.py  record_audit_event.py
web/backend/src/weighttogo/audit/domain/: __init__.py  entities.py  ports.py
web/backend/src/weighttogo/audit/infrastructure/: __init__.py  models.py  repositories.py
web/backend/src/weighttogo/auth/application/: authenticate_user.py  issue_tokens.py  refresh_session.py  register_user.py  revoke_session.py
web/backend/src/weighttogo/auth/domain/: entities.py  exceptions.py  ports.py
web/backend/src/weighttogo/auth/infrastructure/: jwt_adapter.py  models.py  password.py  repositories.py
web/backend/src/weighttogo/auth/interface/: router.py  schemas.py
web/backend/src/weighttogo/dashboard/: __init__.py
web/backend/src/weighttogo/dashboard/application/: __init__.py  build_dashboard_summary.py
web/backend/src/weighttogo/dashboard/interface/: __init__.py  router.py  schemas.py
web/backend/src/weighttogo/goals/application/: abandon_goal.py  get_active_goal_with_progress.py  list_goals.py  set_active_goal.py  update_goal.py
web/backend/src/weighttogo/goals/domain/: entities.py  exceptions.py  ports.py  progress.py  (+1 more)
web/backend/src/weighttogo/preferences/: __init__.py
web/backend/src/weighttogo/shared/: db.py  error_handlers.py  exceptions.py  logging.py  units.py
web/backend/tests/: README.md  conftest.py  test_config.py  test_csrf_middleware.py  test_health.py
web/backend/tests/architecture/: test_import_contracts.py
web/backend/tests/integration/: conftest.py  test_cors_origins.py  test_validation_error_shape.py
web/backend/tests/integration/achievements/: test_achievement_endpoints.py  test_weight_entry_detection.py
web/backend/tests/integration/audit/: test_audit_repository.py  test_index_usage_audit_postgres.py  test_migration_0009.py
web/backend/tests/integration/auth/: test_auth_audit.py  test_auth_endpoints.py  test_auth_security.py  test_c10_trusted_proxy.py  test_c11_cookie_deletion.py  test_c12_refresh_cookie_path.py  test_c13_register_rate_limit.py  test_c2_orphan_token.py  test_c8_email_case.py  test_c9_logout_rate_limit.py
web/backend/tests/integration/dashboard/: test_dashboard_cache.py  test_dashboard_endpoint.py
web/backend/tests/integration/goals/: test_goal_endpoints.py  test_goal_validation.py  test_goals_audit.py  test_index_usage_postgres.py  test_migration_0010.py
web/backend/tests/integration/migrations/: test_migration_round_trips.py
web/backend/tests/integration/preferences/: test_preferences_audit.py
web/backend/tests/integration/weight/: test_index_usage_postgres.py  test_weight_audit.py  test_weight_endpoints.py  test_weight_validation.py
web/backend/tests/scripts/: test_backup_restore.py
web/backend/tests/unit/: conftest.py
web/backend/tests/unit/achievements/: test_detect_achievements_use_case.py  test_entities.py  test_migration_0005.py  test_migration_0008.py  test_schemas.py  test_sqlalchemy_model.py  test_sqlalchemy_repository.py  test_streak_detector.py
web/backend/tests/unit/audit/: test_entities.py  test_record_audit_event.py
web/backend/tests/unit/auth/: test_authenticate_user_use_case.py  test_domain_exceptions.py  test_dummy_bcrypt_cost.py  test_jwt_adapter.py  test_jwt_validation.py  test_locked_account_timing.py  test_migration_0001.py  test_orm_migration_types.py  test_password_adapter.py  test_password_schema_max_length.py  test_refresh_session_replaced_by.py  test_refresh_token_entity.py  test_register_user_use_case.py  test_repository_ports.py  test_revoke_session_use_case.py  test_sqlalchemy_models.py  test_token_use_cases.py  test_user_entity.py
web/backend/tests/unit/dashboard/: test_build_dashboard_summary_use_case.py
web/backend/tests/unit/goals/: test_abandon_goal_use_case.py  test_domain_exceptions.py  test_get_active_goal_with_progress_use_case.py  test_goal_entity.py  test_list_goals_use_case.py  test_migration_0003.py  test_migration_0004.py  test_progress.py  test_repository_port.py  test_set_active_goal_use_case.py  test_sqlalchemy_model.py  test_sqlalchemy_repository.py  test_update_goal_use_case.py
web/backend/tests/unit/preferences/: test_sqlalchemy_model.py
web/backend/tests/unit/shared/: test_cache.py  test_db.py  test_logging.py  test_units.py
web/backend/tests/unit/weight/: test_create_weight_entry_use_case.py  test_cursor_codec.py  test_delete_weight_entry_use_case.py  test_domain_exceptions.py  test_get_rate_of_change.py  test_get_weight_entry_use_case.py  test_list_weight_entries_use_case.py  test_migration_0002.py  test_migration_0007.py  test_orm_migration_types.py  test_rate_of_change.py  test_repository_port.py  test_sqlalchemy_model.py  test_sqlalchemy_repository.py  test_update_weight_entry_use_case.py  test_weight_entry_entity.py  test_weight_schemas.py
(+347 files in other folders)
