[project]
name = "weighttogo"
version = "0.1.0"
description = "Weigh to Go! web application backend (FastAPI)."
requires-python = ">=3.12"
authors = [{ name = "Rick Goshen" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "structlog>=24.0",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1.9",
    "bcrypt>=4.0",
    "pydantic[email]>=2.9",
    "email-validator>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    # Pinned to the ruff-pre-commit rev in .pre-commit-config.yaml; bump both together.
    "ruff==0.15.14",
    "mypy>=1.13",
    "import-linter>=2.1",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "types-passlib>=1.7",
    "types-python-jose>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weighttogo"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "C4", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"alembic/versions/*" = ["D", "F401"]
# FastAPI requires Depends() in default argument positions (B008).
# This is the established pattern in the FastAPI ecosystem and cannot be avoided.
"src/weighttogo/*/interface/router.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=weighttogo --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "postgres: integration tests requiring a PostgreSQL service (NFR-P-3 index usage); skipped unless WEIGHTTOGO_TEST_POSTGRES_DSN is set",
]

[tool.coverage.run]
branch = true

# ---------------------------------------------------------------------------
# import-linter: Clean Architecture dependency contracts (SRS §4.2)
#
# Two contract types work together:
#
#   layers   – enforces inward-only dependencies within each bounded context
#              (domain knows nothing above it; application knows nothing above
#              it except domain; infrastructure may only import application +
#              domain; interface is the outermost layer).
#
#   forbidden – supplements layers by explicitly blocking framework packages
#               from the inner layers and preventing shared/ from importing
#               any bounded context (it must stay cross-cutting only).
#
# Deferred bounded contexts (not yet scaffolded; add contracts when created):
#   - weighttogo.notifications  (SRS §4.2 / FR-N-*)
#   - weighttogo.preferences    (SRS §4.2 / FR-P-*)
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["weighttogo"]
include_external_packages = true

# ── Layer ordering contracts (inward-only dependency rule) ─────────────────

[[tool.importlinter.contracts]]
name = "auth: Clean Architecture layer ordering"
type = "layers"
containers = ["weighttogo.auth"]
layers = ["interface", "infrastructure", "application", "domain"]

[[tool.importlinter.contracts]]
name = "goals: Clean Architecture layer ordering"
type = "layers"
containers = ["weighttogo.goals"]
layers = ["interface", "infrastructure", "application", "domain"]

[[tool.importlinter.contracts]]
name = "weight_tracking: Clean Architecture layer ordering"
type = "layers"
containers = ["weighttogo.weight_tracking"]
layers = ["interface", "infrastructure", "application", "domain"]

# ── Framework exclusion contracts (belt-and-suspenders for inner layers) ───

[[tool.importlinter.contracts]]
name = "auth: domain and application must not import frameworks"
type = "forbidden"
source_modules = [
    "weighttogo.auth.domain",
    "weighttogo.auth.application",
]
forbidden_modules = ["fastapi", "sqlalchemy", "pydantic", "alembic", "starlette"]

[[tool.importlinter.contracts]]
name = "goals: domain and application must not import frameworks"
type = "forbidden"
source_modules = [
    "weighttogo.goals.domain",
    "weighttogo.goals.application",
]
forbidden_modules = ["fastapi", "sqlalchemy", "pydantic", "alembic", "starlette"]

[[tool.importlinter.contracts]]
name = "weight_tracking: domain and application must not import frameworks"
type = "forbidden"
source_modules = [
    "weighttogo.weight_tracking.domain",
    "weighttogo.weight_tracking.application",
]
forbidden_modules = ["fastapi", "sqlalchemy", "pydantic", "alembic", "starlette"]

# ── Dashboard layer ordering (read model: interface + application only) ────

[[tool.importlinter.contracts]]
name = "dashboard: Clean Architecture layer ordering"
type = "layers"
containers = ["weighttogo.dashboard"]
layers = ["interface", "application"]

[[tool.importlinter.contracts]]
name = "dashboard: application must not import frameworks"
type = "forbidden"
source_modules = ["weighttogo.dashboard.application"]
forbidden_modules = ["fastapi", "sqlalchemy", "pydantic", "alembic", "starlette"]

# ── Achievements bounded context ───────────────────────────────────────────

[[tool.importlinter.contracts]]
name = "achievements: Clean Architecture layer ordering"
type = "layers"
containers = ["weighttogo.achievements"]
layers = ["interface", "infrastructure", "application", "domain"]

[[tool.importlinter.contracts]]
name = "achievements: domain and application must not import frameworks"
type = "forbidden"
source_modules = [
    "weighttogo.achievements.domain",
    "weighttogo.achievements.application",
]
forbidden_modules = ["fastapi", "sqlalchemy", "pydantic", "alembic", "starlette"]

# ── Preferences bounded context ────────────────────────────────────────────

[[tool.importlinter.contracts]]
name = "preferences: Clean Architecture layer ordering"
type = "layers"
containers = ["weighttogo.preferences"]
layers = ["interface", "infrastructure", "application", "domain"]

[[tool.importlinter.contracts]]
name = "preferences: domain and application must not import frameworks"
type = "forbidden"
source_modules = [
    "weighttogo.preferences.domain",
    "weighttogo.preferences.application",
]
forbidden_modules = ["fastapi", "sqlalchemy", "pydantic", "alembic", "starlette"]

# ── Shared cross-cutting isolation ─────────────────────────────────────────

[[tool.importlinter.contracts]]
name = "shared: must not import bounded contexts"
type = "forbidden"
source_modules = ["weighttogo.shared"]
forbidden_modules = [
    "weighttogo.auth",
    "weighttogo.goals",
    "weighttogo.weight_tracking",
    "weighttogo.achievements",
    "weighttogo.preferences",
]
